unpackaged/objects/copado__UISection__mdt.object
<CustomObject>
	<fields>
		<fullName>copado__Component__c</fullName>
		<label>Component</label>
		<length>80</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Extension_Package_Configuration__c</fullName>
		<label>Extension Package Configuration</label>
		<referenceTo>copado__ExtensionPackageConfiguration__mdt</referenceTo>
		<relationshipLabel>UISections</relationshipLabel>
		<relationshipName>UISections</relationshipName>
		<type>MetadataRelationship</type>
	</fields>
	<fields>
		<fullName>copado__Location__c</fullName>
		<label>Location</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__TestTool__c</fullName>
		<label>Test Tool</label>
		<referenceTo>copado__TestTool__mdt</referenceTo>
		<relationshipLabel>UISections</relationshipLabel>
		<relationshipName>UISections</relationshipName>
		<type>MetadataRelationship</type>
	</fields>
	<fields>
		<fullName>copado__WhereIsThisUsed__c</fullName>
		<label>Where is this used?</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<label>UISection</label>
	<pluralLabel>UISections</pluralLabel>
</CustomObject>